# Murmr

./: .gitignore  README.md  SESSION_SUMMARY.md  package-lock.json  package.json
.github/workflows/: build-ubuntu.yml  build.yml  release-mac-win.yml
src/: index.html  main.js  overlay.css  overlay.html  overlay.js  styles.css
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/styles/: compact.css  drag-fix.css  hub.css  polish-hero.css  polish-history.css  polish-settings.css  settings-pro.css  wispr.css
