[package]
name = "murmr"
version = "0.6.1"
description = "Privacy-first voice dictation"
authors = ["you"]
edition = "2021"

[lib]
name = "murmr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
whisper-rs = "0.16"
dirs = "5"
ureq = { version = "2", features = ["tls", "json"] }
anyhow = "1"
enigo = "0.2"
arboard = "3"
base64 = "0.22"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"
libc = "0.2"
# Enable Metal GPU acceleration for Whisper on Apple Silicon (huge decode speedup).
# Target-specific feature merge: Linux/Windows keep the plain CPU build above.
whisper-rs = { version = "0.16", features = ["metal"] }
